crates/rune-derive/tests/ui/fail_unsupported_field_attribute.stderr
error: unsupported rune field attribute
 --> tests/ui/fail_unsupported_field_attribute.rs:6:18
  |
6 |     #[rune_field(format = "legacy")]
  |                  ^^^^^^
